--- a/README.org
+++ b/README.org
@@ -13,12 +13,15 @@ In org-mode:
 ,#+html_link_newtab: t
 ,* Chapter1
 
-[​[https://example.com/]] and [​[https://example.org/]] will open in new tabs.
+[​[https://example.com/]] and [​[https://example.org/]] will open in a new tabs.
 
 ,#+attr_html: :target _self
-[​[https://example.com/]] will open in the same tab because the target attribute is explicitly specified. [​[https://example.org/]] will open in a new tab because attr_html does not affect the second link in the paragraph .
+[​[https://example.com/]] will open in the current tab because the target attribute is explicitly specified. [​[https://example.org/]] will open in a new tab because attr_html does not affect the second link in the paragraph .
 
-[​[*Chapter1][Chapter1]] will open in the same tab.
+[​[*Chapter1][Chapter1]] will open in the current tab.
+
+#+attr_html: :target _blank :rel noopener
+[[*Chapter1][Chapter1]] will open in a new tab.
 #+end_src
 
 The variable ~org-newtab-link-enabled~ can be a file-local variable or a directory-local variable.
